@@ -1,10 +1,59 @@
 <html>
   <head>
-    <title>
-      Welcome
-    </title>
+    <title>Welcome</title>
+
+    <style type="text/css">
+      .title {
+      background-color: #DDDDDD;
+      padding: 0.5em;
+      text-color: green;
+      -moz-border-radius: 5px;
+      margin: 0.5em 0 0.5em 0;
+      }
+
+      .chapter {
+      text-indent: 2em;
+      }
+
+      body {
+      background-color: #FFFFF;
+      margin: 0 0.5em 0 0.5em;
+      font: x-normal sans-serif;
+      color: black;
+      }
+      
+    </style>
+
   </head>
 <body>
-  Welcome
+
+<div class="title">Welcome</div>
+<div class="chapter">
+Welcome to Kiwix software. Kiwix is a <a href="http://en.wikipedia.org/wiki/Free_software">free software<a> able to read <a href="http://www.openzim.org">ZIM files</a>. ZIM files are files merging multimedia content (text, picture, video) typically issued by the <a href="http://en.wikipedia.org/wiki/World_Wide_Web">World Wide Web</a>, like <a href="http://en.wikipedia.org/wiki/Blog">Blogs</a> or <a href="http://en.wikipedia.org/wiki/Wiki">Wikis</a>. Kiwix is consequently a solution which allows you to browse content offline which is normaly only available online. It is especially developed to give access to the content of the free encyclopedia <a href="http://en.wikipedia.org/wiki/Wikipedia">Wikipedia</a> to people which do not have access to <a href="http://en.wikipedia.org/wiki/Internet">Internet</a>. However Kiwix is a software under active development, it can be used.
+</div>
+
+<div class="title">ZIM files</div>
+<div class="chapter">
+Currently, there does not exist any official release of ZIM files, but we are working on a few of them. You can download development files <a href="http://tmp.kiwix.org/zim/">here</a> with your browser and open them with the menu "File > Open file..."
+</div>
+
+<div class="title" style="text-indent: 0px;">Help</div>
+<ul>
+  <li><a href="https://sourceforge.net/tracker/?group_id=175508&atid=873515">Report a bug</a></li>
+  <li><a href="https://sourceforge.net/tracker/?group_id=175508&atid=873518">Make a feature request</a></li>
+  <li><a href="http://www.kiwix.org/index.php/FAQ">Frequently asked questions</a></li>
+  <li><a href="mailto:kelson@kiwix.org">Other</a></li>
+</ul>
+<div class="chapter">
+</div>
+
+<div class="title">More...</div>
+<div class="chapter" style="text-indent: 0px;">
+<ul>
+  <li><a href="">Official Kiwix project Web page</li>
+  <li><a href="">Official openZIM project Web page</li>
+</ul>
+</div>
+
 </body>
 </html>
